--- a/src/components/GlobalStyles/GlobalStyles.module.scss
+++ b/src/components/GlobalStyles/GlobalStyles.module.scss
@@ -17,6 +17,7 @@ html {
 
 body {
     // font-family: var(--font-family);
+    background-color: #f5f5fa;
     font-size: 1.6rem;
     line-height: 1.5;
     text-rendering: optimizeSpeed;
