Đang làm banner

--- a/src/components/Layouts/Banner/Banner.module.scss
+++ b/src/components/Layouts/Banner/Banner.module.scss
@@ -1,9 +1,19 @@
 /* Chung */
-// .wrapper {
-//     margin-left: 20px;
-//     padding: 12px;
-//     padding-block: 16px;
-//     height: 100%;
-//     background: rgb(255, 255, 255);
-//     border-radius: 8px;
-// }
+.wrapper {
+    margin-left: 20px;
+    margin-bottom: 16px;
+    padding: 12px;
+    background: rgb(255, 255, 255);
+    border-radius: 8px;
+}
+
+/* Img-container */
+.img-container {
+    display: inline-flex;
+}
+
+.img {
+    object-fit: contain;
+    width: 500px;
+    height: 500px;
+}
