--- a/src/components/Layouts/Content/Content.module.scss
+++ b/src/components/Layouts/Content/Content.module.scss
@@ -1,9 +1,8 @@
 /* Chung */
 .wrapper {
     margin-left: 20px;
+    margin-bottom: 16px;
     padding: 12px;
-    padding-block: 16px;
-    // height: 100%;
     background: rgb(255, 255, 255);
     border-radius: 8px;
 }
